# chameleon-firmware

./: .clippy.toml  .gitignore  .rustfmt.toml  CMakeLists.txt  Cargo.toml  README.md  build.rs  prj.conf  sdkconfig.defaults  sysbuild.conf  west.yml
.cargo/: config.toml
components/cocobus/: CMakeLists.txt  placement.lf
components/cocobus/include/: cocobus.h
components/cocobus/src/: cocobus.c  internal.h  interrupt.S  timer.c
main/: main.c
src/: led.rs  lib.rs  main.c
src/net/: mod.rs  wifi.rs
sysbuild/: mcuboot.conf
