# SPDX-FileCopyrightText: 2026 Sam Hanes <sam@maltera.com>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name         = "chameleon"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.88"

[lib]
test = false
bench = false
doctest = false

[[bin]]
name = "main"
path = "./src/bin/main.rs"
test = false
bench = false
doctest = false

[dependencies]
esp-hal = { version = "~1.0", features = [
  "defmt",
  "esp32s3",
  "psram",
  "unstable",
] }

esp-rtos = { version = "0.2.0", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32s3",
] }

esp-radio = { version = "0.17.0", features = [
  "ble",
  "coex",
  "defmt",
  "esp-alloc",
  "esp32s3",
  "smoltcp",
  "unstable",
  "wifi",
] }

esp-alloc = { version = "0.9.0", features = ["defmt"] }

esp-backtrace = { version = "0.18.1", features = [
  "defmt",
  "esp32s3",
  "panic-handler",
]}

esp-bootloader-esp-idf = { version = "0.4.0", features = [
  "defmt",
  "esp32s3",
] }


embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-sync = "0.7.2"
embassy-time = { version = "0.5.0", features = ["defmt"] }

embassy-net = { version = "0.7.1", features = [
  "defmt",
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }

smoltcp = { version = "0.12.0", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }

bt-hci = "0.6.0"
trouble-host = { version = "0.5.0", features = ["gatt"] }


defmt = "1.0.1"
rtt-target = { version = "0.6.2", features = ["defmt"] }


critical-section = "1.2.0"
embedded-io = { version = "0.7.1", features = ["defmt"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
static_cell = "2.1.1"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
